fix: Page scaling incorrect on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 100%;
 }
 
 .content {
@@ -156,6 +155,10 @@
 }
 
 @media screen and (max-width: 500px) {
+	.background {
+		background-attachment: scroll;
+	}
+
 	.container a {
 		float: none;
 		display: block;
